Plugin Name: MarketPress
Author: Aaron Edwards (incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.9.1 - 2/13/2014 - Jonathan Cowher, Marko Miljus
----------------------------------------------------------------------
- Fixed mixed-content issues on checkout pages when using SSL
- Fixed when importing products from csv, products with stock set to 0 wouldn't be tracked http://wp.mu/8sp
- Removed outdated translation files
- Added upport for all Stripe payment gateway currencies http://wp.mu/8sw

2.9.0.9 - 2/8/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Updated session handling code - fixes some PHP warnings that some users were reporting

2.9.0.8 - 2/7/2014 - Jonathan Cowher, Marko Miljus
----------------------------------------------------------------------
- Fixed some bugs in WePay gateway
- Localization files (.mo) can now be loaded from wp-content/language/marketpress/mp-{your locale}.mo
- Fixed issue (fatal error) when calculating total price with taxes in 2checkout payment gateway

2.9.0.7 - 2/6/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Fixed a bug where product pagination sometimes wouldn't display

2.9.0.6 - 2/6/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Fixed a bug in [mp_list_products] where products would always show above all other content
- Updated some default styles for cart widget
- Update .pot file

2.9.0.5 - 1/30/2014 - Jonathan Cowher
----------------------------------------------------------------------
- Added presentation settings for choosing alignment of product image instead of always "alignleft"
- Updated mp_product_image function/shortcode to allow for setting product image alignment

2.9.0.4 - 1/29/2014 - Jonathan Cowher, Marko Miljus, Aaron Edwards